--- a/devel/kf5-kconfig/Makefile
+++ b/devel/kf5-kconfig/Makefile
@@ -7,7 +7,7 @@ COMMENT=	KF5 widgets for configuration dialogs
 
 LICENSE=	lgpl2.1+
 
-USES=		cmake compiler:c++11-lib cpe kde:5 qt:5 tar:xz
+USES=		cmake compiler:c++11-lib cpe kde:5 kfhack qt:5 tar:xz
 CPE_VENDOR=	kde
 USE_KDE=	ecm:build
 USE_QT=		core dbus declarative gui linguisttools network xml \
