--- a/devel/kf5-kauth/Makefile
+++ b/devel/kf5-kauth/Makefile
@@ -11,7 +11,7 @@ LICENSE_COMB=	multi
 
 LIB_DEPENDS=	libpolkit-qt5-core-1.so:sysutils/polkit-qt-1@qt5
 
-USES=		cmake compiler:c++11-lib cpe kde:5 qt:5 tar:xz
+USES=		cmake compiler:c++11-lib cpe kde:5 kfhack qt:5 tar:xz
 CPE_VENDOR=	kde
 USE_KDE=	coreaddons \
 		ecm:build
