--- a/devel/kf5-kcmutils/Makefile
+++ b/devel/kf5-kcmutils/Makefile
@@ -8,7 +8,7 @@ COMMENT=	KF5 utilities for working with KCModules
 LICENSE=        bsd3 lgpl2.1+
 LICENSE_COMB=   multi
 
-USES=		cmake compiler:c++11-lib gettext kde:5 qt:5 tar:xz
+USES=		cmake compiler:c++11-lib gettext kde:5 kfhack qt:5 tar:xz
 USE_KDE=	auth codecs config configwidgets coreaddons guiaddons i18n \
 		itemviews kdeclarative package service \
 		widgetsaddons xmlgui \
