--- a/x11-toolkits/kf5-attica/Makefile
+++ b/x11-toolkits/kf5-attica/Makefile
@@ -8,7 +8,7 @@ COMMENT=	Open Collaboration Services API library
 LICENSE=	lgpl2.1 lgpl3
 LICENSE_COMB=	dual
 
-USES=		cmake compiler:c++11-lib kde:5 pathfix qt:5 tar:xz
+USES=		cmake compiler:c++11-lib kde:5 kfhack pathfix qt:5 tar:xz
 USE_KDE=	ecm:build
 USE_QT=		core network \
 		buildtools:build qmake:build testlib:build
