--- a/x11-toolkits/gtk-layer-shell/Makefile
+++ b/x11-toolkits/gtk-layer-shell/Makefile
@@ -1,22 +1,45 @@
 PORTNAME=	gtk-layer-shell
 DISTVERSIONPREFIX=	v
-DISTVERSION=	0.3.0
-PORTREVISION=	1
+DISTVERSION=	0.9.1
 CATEGORIES=	x11-toolkits
 
 MAINTAINER=	ports@MidnightBSD.org
-COMMENT=	GTK+ library for the Wayland layer-shell protocol
+COMMENT=	GTK3 library for the Wayland layer-shell protocol
+WWW=		https://github.com/wmww/gtk-layer-shell
 
 LICENSE=	lgpl3 mit
 LICENSE_COMB=	multi
 
 BUILD_DEPENDS=	wayland-protocols>=1.16:graphics/wayland-protocols
 LIB_DEPENDS=	libwayland-client.so:graphics/wayland
+TEST_DEPENDS=	evdev-proto>0:devel/evdev-proto
 
-USES=		compiler:c11 gnome meson pkgconfig
+USES=		compiler:c11 gnome meson pkgconfig vala:build
 USE_GNOME=	gtk30 introspection:build
-USE_LDCONFIG=	yes
 USE_GITHUB=	yes
+USE_LDCONFIG=	yes
 GH_ACCOUNT=	wmww
+PLIST_SUB=	VERSION=${PORTVERSION}
+
+OPTIONS_DEFINE=	DOCS EXAMPLES
+
+DOCS_BUILD_DEPENDS=	gtk-doc>0:textproc/gtk-doc
+DOCS_MESON_TRUE=	docs
+
+EXAMPLES_MESON_TRUE=	examples
+
+pre-configure:
+# .if !exists() evaluates too early before gtk3 has a chance to be installed
+	@if ! pkg-config --exists gdk-wayland-3.0; then \
+		${ECHO_MSG} "${PKGNAME}: Needs gtk3 with WAYLAND support enabled."; \
+		${FALSE}; \
+	fi
+
+pre-test:
+	@if [ ! -e ${WRKDIR}/.meson_build_tests ]; then \
+		${RM} ${CONFIGURE_COOKIE} ${BUILD_COOKIE}; \
+		${MAKE} -C${.CURDIR} build MESON_ARGS="${MESON_ARGS} --reconfigure -Dtests=true"; \
+		${TOUCH} ${WRKDIR}/.meson_build_tests; \
+	fi
 
 .include <bsd.port.mk>
