--- a/x11-themes/kf6-kcolorscheme/Makefile
+++ b/x11-themes/kf6-kcolorscheme/Makefile
@@ -5,7 +5,7 @@ CATEGORIES=	x11-themes kde kde-frameworks
 COMMENT=	Classes to read and interact with KColorScheme
 MAINTAINER=	ports@MidnightBSD.org
 
-USES=		cmake gettext gl kde:6 qt:6 tar:xz
+USES=		cmake gettext gl kde:6 kfhack qt:6 tar:xz
 USE_GL=		gl opengl
 USE_KDE=	config guiaddons i18n \
 		ecm:build
