--- a/x11-themes/kf5-kemoticons/Makefile
+++ b/x11-themes/kf5-kemoticons/Makefile
@@ -5,7 +5,7 @@ CATEGORIES=	x11-themes kde kde-frameworks
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	KF5 library to convert emoticons
 
-USES=		cmake compiler:c++11-lib kde:5 qt:5 tar:xz
+USES=		cmake compiler:c++11-lib kde:5 kfhack qt:5 tar:xz
 USE_KDE=	archive config coreaddons service \
 		ecm:build
 USE_QT=		core dbus gui xml \
