--- a/x11-themes/kf5-kiconthemes/Makefile
+++ b/x11-themes/kf5-kiconthemes/Makefile
@@ -5,7 +5,7 @@ CATEGORIES=	x11-themes kde kde-frameworks
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	KF5 library for handling icons in applications
 
-USES=		cmake compiler:c++11-lib gettext kde:5 qt:5 tar:xz
+USES=		cmake compiler:c++11-lib gettext kde:5 kfhack qt:5 tar:xz
 USE_KDE=	archive auth codecs config configwidgets coreaddons \
 		i18n widgetsaddons \
 		ecm:build
