www/py-nh3: test not working

--- a/www/py-nh3/Makefile
+++ b/www/py-nh3/Makefile
@@ -21,6 +21,8 @@ USE_PYTHON=	autoplist pep517
 CARGO_BUILD=	no
 CARGO_INSTALL=	no
 
+NO_TEST=	yes
+
 TEST_ENV=	PYTHONPATH=${FAKE_DESTDIR}${PYTHONPREFIX_SITELIBDIR}
 
 .include <bsd.port.mk>
