--- a/security/kf5-kdesu/Makefile
+++ b/security/kf5-kdesu/Makefile
@@ -5,7 +5,7 @@ CATEGORIES=	security kde kde-frameworks
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	KF5 integration with su for elevated privileges
 
-USES=		cmake compiler:c++11-lib gettext kde:5 qt:5 tar:xz xorg
+USES=		cmake compiler:c++11-lib gettext kde:5 kfhack qt:5 tar:xz xorg
 USE_KDE=	config coreaddons i18n pty service \
 		ecm:build
 USE_QT=		core \
