--- a/accessibility/qt5-speech/Makefile
+++ b/accessibility/qt5-speech/Makefile
@@ -37,4 +37,8 @@ ALSA_LIB_DEPENDS=	libasound.so:audio/alsa-lib
 ALSA_VARS=		QMAKE_CONFIGURE_ARGS+=--feature-flite_alsa
 ALSA_VARS_OFF=		QMAKE_CONFIGURE_ARGS+=--no-feature-flite_alsa
 
+post-install:
+	${REINPLACE_CMD} 's|/../../../../|/../../../|g' \
+                ${PREFIX}/lib/cmake/Qt5*/Qt5*Config.cmake
+
 .include <bsd.port.mk>
