--- a/devel/qt5-linguisttools/Makefile
+++ b/devel/qt5-linguisttools/Makefile
@@ -19,6 +19,8 @@ post-patch:
 		${WRKSRC}/src/linguist/linguist.pro
 
 post-install:
+	${REINPLACE_CMD} 's|/../../../../|/../../../|g' \
+                ${PREFIX}/lib/cmake/Qt5*/Qt5*Config.cmake
 .for f in lrelease lupdate
 	${INSTALL_MAN} ${WRKSRC}/src/linguist/${f}/${f}.1 \
 		${STAGEDIR}${PREFIX}/share/man/man1
