--- a/lang/gjs/Makefile
+++ b/lang/gjs/Makefile
@@ -26,6 +26,8 @@ USE_LDCONFIG=	yes
 CONFIGURE_ENV=	PYTHONDONTWRITEBYTECODE=1
 MAKE_ENV=	PYTHONDONTWRITEBYTECODE=1
 
+NO_TEST=	yes
+
 post-patch:
 	${REINPLACE_CMD} -e "s|'--warn-error'|''|" ${WRKSRC}/meson.build
 
