--- a/x11/kf6-kded/Makefile
+++ b/x11/kf6-kded/Makefile
@@ -5,7 +5,7 @@ CATEGORIES=	x11 kde kde-frameworks
 COMMENT=	Central daemon of KDE work spaces
 MAINTAINER=	ports@MidnightBSD.org
 
-USES=		cmake gl kde:6 qt:6 tar:xz
+USES=		cmake gl kde:6 kfhack qt:6 tar:xz
 USE_GL=		gl opengl
 USE_KDE=	config coreaddons crash dbusaddons service \
 		ecm:build
