--- a/x11/kf6-kglobalaccel/Makefile
+++ b/x11/kf6-kglobalaccel/Makefile
@@ -5,7 +5,7 @@ CATEGORIES=	x11 kde kde-frameworks
 COMMENT=	Global desktop keyboard shortcuts
 MAINTAINER=	ports@MidnightBSD.org
 
-USES=		cmake gl kde:6 qt:6 tar:xz
+USES=		cmake gl kde:6 kfhack qt:6 tar:xz
 USE_GL=		gl opengl
 USE_KDE=	ecm:build
 USE_QT=		base tools
