--- a/x11/kf6-krunner/Makefile
+++ b/x11/kf6-krunner/Makefile
@@ -5,7 +5,7 @@ CATEGORIES=	x11 kde kde-frameworks
 COMMENT=	Framework for providing different actions given a string query
 MAINTAINER=	ports@MidnightBSD.org
 
-USES=		cmake gettext gl kde:6 qt:6 tar:xz
+USES=		cmake gettext gl kde:6 kfhack qt:6 tar:xz
 USE_GL=		gl opengl
 USE_KDE=	config coreaddons i18n itemmodels \
 		ecm:build
