--- a/devel/cargo-c/Makefile
+++ b/devel/cargo-c/Makefile
@@ -1,7 +1,6 @@
 PORTNAME=	cargo-c
-DISTVERSION=	0.9.27
-DISTVERSIONSUFFIX=	+cargo-0.74.0
-PORTREVISION=	2
+DISTVERSION=	0.10.13
+DISTVERSIONSUFFIX=	+cargo-0.88.0
 CATEGORIES=	devel
 MASTER_SITES=	CRATESIO
 # XXX Teach USES=cargo to have proper default
@@ -14,7 +13,9 @@ WWW=		https://github.com/lu-zero/cargo-c
 LICENSE=	mit
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
-LIB_DEPENDS=	libcurl.so:ftp/curl
+LIB_DEPENDS=	libgit2.so:devel/libgit2 \
+		libcurl.so:ftp/curl \
+		libssh2.so:security/libssh2
 
 USES=		cargo ssl
 PLIST_FILES=	bin/cargo-capi \
@@ -28,17 +29,12 @@ NO_TEST=	yes
 .include <bsd.port.pre.mk>
 
 # prevent address space exhaustion on armv6/armv7
-.if ${ARCH:Marmv?}
+.if ${ARCH:Marmv?} || ${ARCH} == powerpc
 LTO_UNSAFE=	yes
 .endif
 
 post-patch:
 	@${REINPLACE_CMD} -e 's,libdir.join("pkgconfig,prefix.join("libdata/pkgconfig,' \
 		${WRKSRC}/src/install.rs
-	# XXX Need devel/libgit2 >= 1.6.4; libgit2 depends on libssh2, so bundle both
-	@${REINPLACE_CMD} 's/if try_to_use_system_libgit2/if false/' \
-		${WRKSRC}/cargo-crates/libgit2-sys-*/build.rs
-	@${REINPLACE_CMD} '/env::var/s/LIBSSH2.*PKG/disabled_&/' \
-		${WRKSRC}/cargo-crates/libssh2-sys-*/build.rs
 
 .include <bsd.port.post.mk>
