--- a/databases/postgresql-libpqxx/Makefile
+++ b/databases/postgresql-libpqxx/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	libpqxx
-PORTVERSION=	7.3.1
+DISTVERSION=	7.10.1
 CATEGORIES=	databases
 PKGNAMEPREFIX=	postgresql-
 DIST_SUBDIR=	postgresql
@@ -8,22 +8,19 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	New C++ interface for PostgreSQL
 WWW=		https://pqxx.org/
 
-LICENSE=        bsd3
+LICENSE=	bsd3
+LICENSE_FILE=	${WRKSRC}/COPYING
 
-CONFLICTS=	postgresql-libpqxx-[1-5].* postgresql-libpqxx3-3.* \
-		postgresql-libpqxx4-4.*
+USES=		cmake compiler:c++17-lang pathfix pkgconfig pgsql
+USE_LDCONFIG=	yes
 
-USES=		compiler:c++11-lang gmake libtool pathfix pgsql python:build shebangfix
 USE_GITHUB=	yes
 GH_ACCOUNT=	jtv
-GNU_CONFIGURE=	yes
-USE_LDCONFIG=	yes
-SHEBANG_FILES=	${WRKSRC}/tools/splitconfig
-INSTALL_TARGET=	install-strip
-PLIST_SUB=	PORTVERSION=${PORTVERSION:R}
 
-CONFIGURE_ARGS=	--enable-shared \
-		--disable-documentation \
-		--disable-dependency-tracking
+PLIST_SUB=	DISTVERSION=${DISTVERSION:R}
+
+CMAKE_OFF=	BUILD_TEST
+CMAKE_ON=	BUILD_SHARED_LIBS \
+		CMAKE_SKIP_RPATH
 
 .include <bsd.port.mk>
