--- a/graphics/kf6-kimageformats/Makefile
+++ b/graphics/kf6-kimageformats/Makefile
@@ -5,7 +5,7 @@ CATEGORIES=	graphics kde kde-frameworks
 COMMENT=	Plugins to allow QImage to support extra file formats
 MAINTAINER=	ports@MidnightBSD.org
 
-USES=		cmake gl kde:6 pkgconfig qt:6 tar:xz
+USES=		cmake gl kde:6 kfhack pkgconfig qt:6 tar:xz
 USE_GL=		gl opengl
 USE_KDE=	archive ecm:build
 USE_QT=		base
