--- a/dns/Makefile
+++ b/dns/Makefile
@@ -60,6 +60,7 @@ SUBDIR += py-ldns
 SUBDIR += py-publicsuffix2
 SUBDIR += py-py3dns
 SUBDIR += py-pycares
+SUBDIR += py-tld
 SUBDIR += py-tldextract
 SUBDIR += rubygem-public_suffix
 SUBDIR += samba-nsupdate
