--- a/math/Makefile
+++ b/math/Makefile
@@ -90,6 +90,7 @@
     SUBDIR += openblas
     SUBDIR += osi
     SUBDIR += p5-Bit-Vector
+    SUBDIR += p5-Data-Float
     SUBDIR += p5-Graph
     SUBDIR += p5-Math-Base36
     SUBDIR += p5-Math-BigInt
