--- a/security/Makefile
+++ b/security/Makefile
@@ -175,10 +175,12 @@ SUBDIR += p5-Crypt-OpenSSL-X509
 SUBDIR += p5-Crypt-RC4
 SUBDIR += p5-Crypt-RC5
 SUBDIR += p5-Crypt-RC6
+SUBDIR += p5-Crypt-Rijndael
 SUBDIR += p5-Crypt-SMIME
 SUBDIR += p5-Crypt-SSLeay
 SUBDIR += p5-Crypt-SmbHash
 SUBDIR += p5-CryptX
+SUBDIR += p5-Data-Entropy
 SUBDIR += p5-Data-Password
 SUBDIR += p5-Digest
 SUBDIR += p5-Digest-BubbleBabble
