--- a/audio/Makefile
+++ b/audio/Makefile
@@ -11,6 +11,7 @@ SUBDIR += chromaprint
 SUBDIR += csound
 SUBDIR += dssi
 SUBDIR += eawpats
+SUBDIR += eburl128
 SUBDIR += esound
 SUBDIR += espeak-ng
 SUBDIR += exaile
@@ -85,6 +86,7 @@ SUBDIR += libcddb
 SUBDIR += libcoverart
 SUBDIR += libdiscid
 SUBDIR += libdssialsacompat
+SUBDIR += libeburl128
 SUBDIR += libechonest
 SUBDIR += libgig
 SUBDIR += libgpod
