chinese/jis2gb: prefix hack

--- a/chinese/jis2gb/Makefile
+++ b/chinese/jis2gb/Makefile
@@ -10,6 +10,8 @@ COMMENT=	Convert JIS Kanji to GuoBiao Hanzi
 
 LICENSE=	NONE
 
+FAKE_OPTS=	trueprefix
+
 WRKSRC=		${WRKDIR}/${PORTNAME}
 ALL_TARGET=
 
