--- a/databases/oracle8-client/Makefile
+++ b/databases/oracle8-client/Makefile
@@ -1,12 +1,13 @@
 PORTNAME=	oracle8-client
 PORTVERSION=	0.2.0
-PORTREVISION=	4
+PORTREVISION=	5
 CATEGORIES=	databases
 MASTER_SITES=	FREEBSD_LOCAL/fjoe \
 		http://www.grosbein.net/freebsd/distfiles/
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Oracle 8 client
+WWW=		http://www.grosbein.net/freebsd/oracle/
 
 LICENSE=	unknown
 
