--- a/net-p2p/libtorrent/Makefile
+++ b/net-p2p/libtorrent/Makefile
@@ -1,44 +1,36 @@
 PORTNAME=	libtorrent
-PORTVERSION=	0.13.8
+DISTVERSION=	0.16.5
 CATEGORIES=	net-p2p
-MASTER_SITES=	https://rtorrent.net/downloads/
+MASTER_SITES=	https://github.com/rakshasa/rtorrent/releases/download/v${DISTVERSION}/
 
-MAINTAINER=	ports@MidnightBSD.org
-COMMENT=	BitTorrent Library
+MAINTAINER=	eduardo@FreeBSD.org
+COMMENT=	BitTorrent Library written in C++
+WWW=		https://github.com/rakshasa/libtorrent
 
-LICENSE=	gpl2 gpl3
-LICENSE_COMB=	dual
+LICENSE=	gpl2+
 LICENSE_FILE=	${WRKSRC}/COPYING
 
-USES=		autoreconf compiler:c++11-lang libtool localbase:ldflags pathfix pkgconfig ssl
+LIB_DEPENDS=	libcurl.so:ftp/curl
+TEST_DEPENDS=	cppunit>0:devel/cppunit
 
-GNU_CONFIGURE=	yes
-CONFIGURE_ARGS=	--disable-debug
-CONFIGURE_ENV=	OPENSSL_LIBS="-L${OPENSSLLIB} -lcrypto" OPENSSL_CFLAGS="-I\
-								${OPENSSLINC}"
+USES=		compiler:c++17-lang cpe libtool localbase:ldflags pathfix \
+		pkgconfig ssl
 USE_LDCONFIG=	yes
 
-OPTIONS_DEFINE=	KQUEUE
-OPTIONS_DEFAULT=KQUEUE
-KQUEUE_DESC=	Use kqueue(2) support
+GNU_CONFIGURE=	yes
+CONFIGURE_ARGS=	--disable-debug \
+		--with-kqueue \
+		--without-epoll
+CONFIGURE_ENV=	OPENSSL_CFLAGS="-I ${OPENSSLINC}" \
+		OPENSSL_LIBS="-L${OPENSSLLIB} -lcrypto"
 
 # This makes sure that /usr/local/lib appears before /usr/lib when
 # linking libtorrent to avoid linking with base's libcrypto.
 MAKE_ARGS=	LDFLAGS="${LDFLAGS}"
 
-KQUEUE_CONFIGURE_WITH=	kqueue
+INSTALL_TARGET=	install-strip
+TEST_TARGET=	check
 
-.include <bsd.port.pre.mk>
+TESTING_UNSAFE=	https://github.com/rakshasa/libtorrent/issues/292
 
-# Disable instrumentation, which requires 64-bit atomic ops, on i386 (when
-# using gcc) and powerpc to avoid linking errors:
-# /usr/local/lib/libtorrent.so: undefined reference to `__sync_add_and_fetch_8'
-# /usr/local/lib/libtorrent.so: undefined reference to `__sync_fetch_and_and_8'
-.if ${ARCH} == i386 && ${CHOSEN_COMPILER_TYPE} == gcc || ${ARCH} == powerpc
-CONFIGURE_ARGS+=--disable-instrumentation
-.endif
-
-post-install:
-	@${STRIP_CMD} ${STAGEDIR}${PREFIX}/lib/libtorrent.so.21.0.0
-
-.include <bsd.port.post.mk>
+.include <bsd.port.mk>
