--- a/www/wordpress/Makefile
+++ b/www/wordpress/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	wordpress
-DISTVERSION=	6.7.2
+DISTVERSION=	6.9
 PORTREVISION?=	0
 .ifndef WORDPRESS_LANG
 PORTEPOCH=	1
@@ -29,7 +29,7 @@ PKGNAMESUFFIX=	-${WORDPRESS_LANG}
 CPE_LANG=	${WORDPRESS_LANG}
 .endif
 
-USE_PHP=	curl exif fileinfo ftp gd mysqli tokenizer xml zip zlib
+USE_PHP=	curl exif fileinfo filter ftp gd mysqli tokenizer xml zip zlib
 CONFLICTS_INSTALL=	??-wordpress
 NO_ARCH=	yes
 NO_BUILD=	yes
