--- a/graphics/gd/Makefile
+++ b/graphics/gd/Makefile
@@ -24,7 +24,8 @@ TMPDIR?=	/tmp
 MAKE_ENV=	TMPDIR=${TMPDIR}
 SUB_FILES=	gdlib-config
 USE_LDCONFIG=	yes
-TEST_TARGET=	check
+NO_TEST=	yes
+#TEST_TARGET=	check
 
 OPTIONS_DEFINE=	PNG JPEG WEBP TIFF XPM HEIF AVIF LIQ FREETYPE FONTCONFIG RAQM ICONV THREADS
 OPTIONS_DEFAULT=PNG JPEG WEBP TIFF FREETYPE FONTCONFIG ICONV
