devel/qt5-linguist: ok

--- a/devel/qt5-linguist/Makefile
+++ b/devel/qt5-linguist/Makefile
@@ -22,7 +22,7 @@ INSTALL_WRKSRC=	${WRKSRC}/src/${PORTNAME}/${PORTNAME}
 QT_BINARIES=	yes
 
 post-install:
-	${REINPLACE_CMD} 's|/../../../../|/../../../|g' \
+	-${REINPLACE_CMD} 's|/../../../../|/../../../|g' \
                 ${PREFIX}/lib/cmake/Qt5*/Qt5*Config.cmake
 	${INSTALL_DATA} ${BUILD_WRKSRC}/images/icons/linguist-128-32.png \
 		${STAGEDIR}${PREFIX}/share/pixmaps/linguist-qt5.png
