--- a/sysutils/opensbi/Makefile
+++ b/sysutils/opensbi/Makefile
@@ -1,6 +1,6 @@
 PORTNAME=	opensbi
 DISTVERSIONPREFIX=v
-DISTVERSION=	1.4
+DISTVERSION=	1.7
 CATEGORIES=	sysutils
 
 MAINTAINER=	ports@MidnightBSD.org
@@ -8,6 +8,8 @@ COMMENT=	RISC-V SBI bootloader and firmware
 WWW=		https://github.com/riscv-software-src/opensbi
 
 LICENSE=	bsd2
+
+SKIP_FAKE_CHECK=	.*\.(elf|h|a)$
 
 BUILD_DEPENDS=	bash:shells/bash \
 		dtc:sysutils/dtc
@@ -18,15 +20,10 @@ SHEBANG_FILES=	scripts/Kconfiglib/*.py
 USE_GITHUB=	yes
 GH_ACCOUNT=	riscv-software-src
 
-MAKE_ARGS=	LLVM=1 I=${FAKE_DESTDIR}${TRUE_PREFIX} V=1 FW_PAYLOAD=n
+MAKE_ARGS=	LLVM=1 I=${FAKE_DESTDIR}${PREFIX} V=1 \
+		FW_PAYLOAD=n FW_TEXT_START=0x80000000 \
+		OPENSBI_VERSION_GIT= PLATFORM=generic
 
-OPTIONS_GROUP=		PLATFORMS
-OPTIONS_GROUP_PLATFORMS=GENERIC
-OPTIONS_SUB=		yes
-OPTIONS_DEFAULT=	GENERIC
-
-GENERIC_DESC=		Support for generic platform
-GENERIC_PLATFORM=	generic
 GENERIC_STRIP_ARGS=	-K tohost -K fromhost
 
 INSTALL_TARGET=		install
@@ -35,22 +32,8 @@ PLIST_SUB+=		RISCV_ABI=${PLATFORM_RISCV_ABI}
 
 PLATFORM_RISCV_ABI=	lp64
 
-do-install: # only need install_firmwares target
-
-.for platform in ${OPTIONS_GROUP_PLATFORMS}
-
-post-build-${platform}-on:
-	${MAKE_CMD} -C ${WRKSRC} ${MAKE_ARGS} PLATFORM=${${platform}_PLATFORM}
-
-do-install-${platform}-on:
-	${MKDIR} ${FAKE_DESTDIR}${PREFIX}
-	${MAKE_CMD} -C ${WRKSRC} PLATFORM=${${platform}_PLATFORM} ${MAKE_ARGS} \
-		I=${FAKE_DESTDIR}${PREFIX} V=1 install_firmwares
-
-post-install-${platform}-on:
-	${STRIP_CMD} ${${platform}_STRIP_ARGS} \
-	    ${FAKE_DESTDIR}${DATADIR}/${PLATFORM_RISCV_ABI}/${${platform}_PLATFORM}/firmware/fw_*.elf
-
-.endfor # OPTIONS_GROUP_PLATFORMS
+post-install:
+	${STRIP_CMD} ${GENERIC_STRIP_ARGS} \
+	    ${STAGEDIR}${DATADIR}/${PLATFORM_RISCV_ABI}/generic/firmware/fw_*.elf
 
 .include <bsd.port.mk>
