--- a/www/firefox-esr/Makefile
+++ b/www/firefox-esr/Makefile
@@ -1,10 +1,9 @@
 PORTNAME=	firefox
-DISTVERSION=	102.9.0
-PORTREVISION=	1
+DISTVERSION=	128.12.0
 PORTEPOCH=	1
 CATEGORIES=	www wayland
 MASTER_SITES=	MOZILLA/${PORTNAME}/releases/${DISTVERSION}esr/source \
-		MOZILLA/${PORTNAME}/candidates/${DISTVERSION}esr-candidates/build2/source
+		MOZILLA/${PORTNAME}/candidates/${DISTVERSION}esr-candidates/build1/source
 PKGNAMESUFFIX=	-esr
 DISTFILES=	${DISTNAME}esr.source${EXTRACT_SUFX}
 
@@ -15,23 +14,25 @@ WWW=		https://www.mozilla.com/firefox
 LICENSE=	MPL20 gpl2
 LICENSE_COMB=	dual
 
-PY_FLAVOR=	py39
-
-BUILD_DEPENDS=	nspr>=4.21:devel/nspr \
-		nss>=3.44.3:security/nss \
-		icu>=63.1,1:devel/icu \
+BUILD_DEPENDS=	nspr>=4.32:devel/nspr \
+		nss>=3.101:security/nss \
+		icu>=73.1,1:devel/icu \
 		libevent>=2.1.8:devel/libevent \
-		harfbuzz>=4.1.0:print/harfbuzz \
+		harfbuzz>=8.5.0:print/harfbuzz \
 		graphite2>=1.3.14:graphics/graphite2 \
-		png>=1.6.37:graphics/png \
+		png>=1.6.43:graphics/png \
 		dav1d>=1.0.0:multimedia/dav1d \
-		libvpx>=1.11.0:multimedia/libvpx \
+		libvpx>=1.14.0:multimedia/libvpx \
 		${PYTHON_PKGNAMEPREFIX}sqlite3>0:databases/py-sqlite3@${PY_FLAVOR} \
 		v4l_compat>0:multimedia/v4l_compat \
 		autoconf2.13:devel/autoconf2.13 \
 		nasm:devel/nasm \
 		yasm:devel/yasm \
 		zip:archivers/zip
+ 
+#	${LOCALBASE}/share/wasi-sysroot/lib/wasm32-wasi/libc++abi.a:devel/wasi-libcxx${LLVM_VERSION} \
+#${LOCALBASE}/share/wasi-sysroot/lib/wasm32-wasi/libc.a:devel/wasi-libc@${LLVM_VERSION} \
+#		wasi-compiler-rt${LLVM_VERSION}>0:devel/wasi-compiler-rt${LLVM_VERSION}
 
 USE_GECKO=	gecko
 CPE_PRODUCT=	${PORTNAME}_esr
@@ -41,7 +42,7 @@ CONFIGURE_ENV+=	BINDGEN_CFLAGS="-I${LOCALBASE}/include"
 MBSD64_TARGET=  x86_64-mports-freebsd12.3
 CONFIGURE_TARGET=       ${MBSD64_TARGET}
 
-USES=		tar:xz
+USES+=		perl5 tar:xz
 
 MOZILLA=        browser                                                                                                                                                   
 MOZILLA_NAME=   Browser                                                                                                                                                   
@@ -78,7 +79,7 @@ MOZ_OPTIONS=	--enable-application=browser \
                 --with-system-zlib \
                 --without-wasm-sandboxed-libraries
 
-MAKE_ENV+=    __FreeBSD__=12 __FreeBSD__version=1203501
+MAKE_ENV+=    __FreeBSD__=13 __FreeBSD__version=1303501
 
 .include "Makefile.options"
 
@@ -99,10 +100,6 @@ post-patch:
 	${REINPLACE_CMD} -e 's/"files":{[^}]*}/"files":{}/' \
 		 ${WRKSRC}/third_party/rust/libc/.cargo-checksum.json
 	echo "DEFINES['MOZ_DISABLE_NSWIFI_SCANNER'] = True" >> ${WRKSRC}/moz.build
-
-pre-configure:
-	(cd ${WRKSRC} && ${LOCALBASE}/bin/autoconf2.13)
-	(cd ${WRKSRC}/js/src/ && ${LOCALBASE}/bin/autoconf2.13)
 
 post-install:
 	${INSTALL_DATA} ${FIREFOX_DESKTOP} ${PREFIX}/share/applications/
