add spidermonkey128.  update libpeas, move 1.x to libpeas1

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -491,6 +491,7 @@
     SUBDIR += libpci
     SUBDIR += libpciaccess
     SUBDIR += libpeas
+    SUBDIR += libpeas1
     SUBDIR += libphonenumber
     SUBDIR += libplist
     SUBDIR += libpthread-stubs
