--- a/lang/Makefile
+++ b/lang/Makefile
@@ -116,6 +116,7 @@ SUBDIR += spidermonkey78
 SUBDIR += spidermonkey91
 SUBDIR += spidermonkey102
 SUBDIR += spidermonkey115
+SUBDIR += spidermonkey128
 SUBDIR += tcl-wrapper
 SUBDIR += tcl86
 SUBDIR += tolua
