--- a/devel/Makefile
+++ b/devel/Makefile
@@ -1407,6 +1407,7 @@
     SUBDIR += py-lazy-object-proxy
     SUBDIR += py-libevdev
     SUBDIR += py-libpeas
+    SUBDIR += py-libpeas1
     SUBDIR += py-libvirt
     SUBDIR += py-linecache2
     SUBDIR += py-littleutils
